--- a/visiting.html
+++ b/visiting.html
@@ -100,7 +100,7 @@ font-size:14px;
 <body>
 
   <div class="card">
-    <img class="profile-img" src="C:\Users\BALA BHARGAVI\OneDrive\Pictures\Camera imports\2025-06-23\NAZL3740.JPG"alt="Profile Photo">
+    <img class="profile-img" src="NAZL3740.JPG" alt="Profile Photo">
     <h2>M.Venkata Anil Kumar Reddy</h2>
     <p class="role">Human Resource Manager | Lawyer</p>
    
